--- a/src/components/cards/cards.scss
+++ b/src/components/cards/cards.scss
@@ -1,16 +1,57 @@
 .first{
-    margin-top: 400px;
+    margin-top: 500px;
     width: 15%;
     text-align: center;
+
+    h1{
+        font-family: "Forum", serif;
+        font-size: 40px;
+      }
+      p{
+        margin-top: 20px;
+        font-family: "Forum", serif;
+        font-size: 20px;
+      }
+      img{
+        width: 100%;
+      }
 }
 .second{
-    margin-top: 600px;
+    margin-top: 700px;
     width: 17%;
     text-align: center;
-    margin-bottom: 200px;
+    margin-bottom: 225px;
+
+    img{
+        width: 80%;
+      }
+
+    h1{
+        font-family: "Forum", serif;
+        font-size: 40px;
+      }
+      p{
+        margin-top: 20px;
+        font-family: "Forum", serif;
+        font-size: 20px;
+      }
 }
 .tried{
-    margin-top: 400px;
+    margin-top: 500px;
     width: 15%;
     text-align: center;
+
+    img{
+        width: 80%;
+      }
+
+    h1{
+        font-family: "Forum", serif;
+        font-size: 40px;
+      }
+      p{
+        margin-top: 20px;
+        font-family: "Forum", serif;
+        font-size: 20px;
+      }
 }
