--- a/src/pages/Book/book.scss
+++ b/src/pages/Book/book.scss
@@ -99,7 +99,8 @@
               color: #000000;
               width: 410px;
             }
-            button {
+
+            a {
               position: relative;
               z-index: 19;
               font-family: "Forum";
@@ -112,10 +113,11 @@
               text-transform: uppercase;
               color: #ffffff;
               width: 240px;
-              height: 55px;
+              padding: 15px 0 14px 0;
               background: #0c0b10;
               border-radius: 74px;
               border: 0;
+              text-decoration: none;
             }
           }
         }
