--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -27,6 +27,7 @@ header {
       .BookWithUs,
       .WhyLuxTrips,
       .Contact,
+      .Login,
       .ClientArea {
         user-select: none;
         color: black;
